--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <script src="./node_modules/three/build/three.min.js"></script>
+    <!-- <script src="./node_modules/three/build/three.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+
     <script type="module" src="./main.js" defer></script>
     <div id="planet-name" style="position: absolute; pointer-events: none; display: none;"></div>
     <div id="info-panel" style="display: none; position: absolute; top: 10px; left: 10px; background-color: rgba(50, 50, 50, 0.8); color: white; padding: 10px; border-radius: 5px; font-family: Arial, sans-serif; font-size: 14px; max-width: 300px;"></div>
